--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                     </p>
                                 </ol>
                             </p>
-                            <div><img src="Images/session.png" alt="Session" /></div>
+                            <div class='sessionimg'><img src="Images/session.png" alt="Session" /></div>
                         </li>
                         <li>
                             <h2>Transport Layer</h2>
@@ -131,7 +131,7 @@
                                     </ul>
                                 </p>
                             </ol>
-                            <div><img src="Images/Transport.png" alt="Transport"></div>
+                            <div class='transportimg'><img src="Images/Transport.png" alt="Transport"></div>
                         </li>
                         <li>
                             <h2>Network Layer</h2>
@@ -157,7 +157,7 @@
                                     </ul>
                                 </div>
                             </ol>
-                            <div><img src="Images/Network.png" alt="Network"></div>
+                            <div class="networkimg"><img src="Images/Network.png" alt="Network"></div>
                         </li>
                         <li>
                             <h2>Data-Link layer</h2>
@@ -195,7 +195,7 @@
                                     </ul>
                                 </div>
                             </ol>
-                            <div><img src="Images/Data.PNG" alt="Data"></div>
+                            <div class="dataimg"><img src="Images/Data.PNG" alt="Data"></div>
                         </li>
                         <li>
                             <h2>Presentation Layer</h2>
@@ -220,7 +220,7 @@
                                     </ul>
                                 </div>
                             </ol>
-                            <div><img src="Images/Physical.png" alt="Physical" /></div>
+                            <div class='presentationimg'><img src="Images/Physical.png" alt="Physical" /></div>
                         </li>
                     </ol>
 
