--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class='mainbody'>
         <div class="container">
             <div class="headerdiv">
-                <h1>OSI: The 7 Layer Computer Architecture Model.</h1>
+                <h1>OSI: The 7 Layered Computer Architecture Model.</h1>
             </div>
             <div class="osimodelimg">
                 <img src="Images/osimodel.png" alt="OSI Model">
@@ -22,7 +22,7 @@
                 <div class='para1'>
                      <h3>What is OSI Model?</h3>
                      <p>The Open Systems Interconnection Model (OSI) is a framework used to describe the functions of a networking system.In 1983, the CCITT and ISO documents were merged to form The Basic Reference Model for Open Systems Interconnection, usually referred to as the Open Systems Interconnection Reference Model, OSI Reference Model, or simply OSI model. It was published in 1984 by both the ISO, as standard ISO 7498, and the renamed CCITT (now called the Telecommunications Standardization Sector of the International Telecommunication Union or ITU-T) as standard X.200.</p>
-                     <div><img src="Images/overvies.PNG" alt="OSI Layers"></div>
+                     <div class='overviewimg'><img src="Images/overvies.PNG" alt="OSI Layers"></div>
                 </div>
                 <div class="para2">
                     <h3>Why OSI Model?</h3>
