--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1>OSI: The 7 Layered Computer Architecture Model.</h1>
             </div>
             <div class="osimodelimg">
-                <!-- <img src="Images/osimodel.png" alt="OSI Model"> -->
+                <img src="Images/osimodel.png" alt="OSI Model">
             </div>
             <div class="blogbody">
                 <div class='para1'>
