responsive all images

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <div class="blogbody">
                 <div class='para1'>
                      <h2>What is OSI Model?</h2>
-                     <!-- <div class='overviewimg'><img src="Images/overvies.PNG" alt="OSI Layers"></div> -->
+                     <div class='overviewimg'><img src="Images/overvies.PNG" alt="OSI Layers"></div>
                      <p>The Open Systems Interconnection Model (OSI) is a framework used to describe the functions of a networking system.In 1983, the CCITT and ISO documents were merged to form The Basic Reference Model for Open Systems Interconnection, usually referred to as the Open Systems Interconnection Reference Model, OSI Reference Model, or simply OSI model. It was published in 1984 by both the ISO, as standard ISO 7498, and the renamed CCITT (now called the Telecommunications Standardization Sector of the International Telecommunication Union or ITU-T) as standard X.200.</p>
                 </div>
                 <div class="para2">
                     <h2>Why OSI Model?</h2>
-                    <!-- <div class="lanimg"><img src="Images/lan.PNG" alt="Example One"></div> -->
+                    <div class="lanimg"><img src="Images/lan.PNG" alt="Example One"></div>
                     <p class="reasonone">
                         when two computer want to send data we can connect the computer using a lan cable and connectors to transfer data with the help of Network Interface Card.
                     </p>
@@ -43,9 +43,9 @@
                     <ol class="headingol">
                         <li>
                             <h2 class="hed">Application Layer:-</h2>
-                            <!-- <div class="applicationimg">
+                            <div class="applicationimg">
                                 <img src="Images/Application.PNG" alt="Application Protocols">
-                            </div> -->
+                            </div>
                             <p class="aplication">
                                 <ol class="oldiv">
                                     <li>As the name suggests application layer is a layer which works on the application but it does not includes computer applications like Chrome & Firefox, but contains <strong>Protocols </strong> which are needed to make this application works correctly in the network.</li>
@@ -70,9 +70,9 @@
                         </li>
                         <li>
                             <h2 class="hed">Presentation Layer</h2>
-                            <!-- <div class="presentationimg">
+                            <div class="presentationimg">
                                 <img src="Images/Presentation.PNG" alt="Presentation Protocols">
-                            </div> -->
+                            </div>
                             <p>
                                 <ol class="oldiv">
                                     <li>The main functioning of the presentation layer is to convert the data received from the application which is in the form of characters and number into the machine friendly language i.e <strong>Binary Code (01).</strong><p>Eg. ASCII -----> EBCDIC
@@ -91,7 +91,7 @@
                         </li>
                         <li>
                             <h2 class="hed">Session Layer</h2>
-                            <!-- <div class='sessionimg'><img src="Images/session.png" alt="Session" /></div> -->
+                            <div class='sessionimg'><img src="Images/session.png" alt="Session" /></div>
                             <p>
                                 <ol class="oldiv">
                                     <li>Session layer is responsible for setting and managing the connection in the computer network.The Data unit in session layer is called a <strong>PDU(Protocol Data Unit).</strong></li>
@@ -116,7 +116,7 @@
                         </li>
                         <li>
                             <h2 class="hed">Transport Layer</h2>
-                            <!-- <div class='transportimg'><img src="Images/Transport.png" alt="Transport"></div> -->
+                            <div class='transportimg'><img src="Images/Transport.png" alt="Transport"></div>
                             <ol class='oldiv'>
                                 <li>Transport layer is the 4th layer of the OSI Model.</li>
                                 <li>The main role of the transport layer is to provide the communication services directly to the application processes running on different hosts.</li>
@@ -140,7 +140,7 @@
                         </li>
                         <li>
                             <h2 class="hed">Network Layer</h2>
-                            <!-- <div class="networkimg"><img src="Images/Network.png" alt="Network"></div> -->
+                            <div class="networkimg"><img src="Images/Network.png" alt="Network"></div>
                             <ol class="oldiv">
                                 <li>Network Layer is the 3rd layer of the OSI Model.</li>
                                 <li>It handles the service requests from the transport layer and further forwards the service request to the data link layer.</li>
@@ -167,7 +167,7 @@
                         </li>
                         <li>
                             <h2 class="hed">Data-Link layer</h2>
-                            <!-- <div class="dataimg"><img src="Images/Data.PNG" alt="Data"></div> -->
+                            <div class="dataimg"><img src="Images/Data.PNG" alt="Data"></div>
                             <ol class="oldiv">
                                 <li>The data link layer is a 4th layer from the top and 2nd layer from the bottom.</li>
                                 <div>
@@ -234,7 +234,7 @@
                 </div>
                 <div class="para4">
                     <h2>Flow of data in OSI Model:- </h2>
-                    <!-- <img src="Images/flow.png" alt="Data Flow"> -->
+                    <img src="Images/flow.png" alt="Data Flow">
                     <p class="endpara">Above diagram illustrates how the data is sent and processed over the 7 layer from sender to receiver.</p>
                 </div>
             </div>
