responsive and animation changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>OSI Model</title>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
@@ -15,25 +16,25 @@
     <div class='mainbody'>
         <div class="container">
             <div class="divbodymain">
-            <div class="headerdiv">
+            <div class="headerdiv"  data-aos="fade-in">
                 <h1>OSI: The 7 Layered Computer Architecture Model.</h1>
             </div>
-            <div class="osimodelimg">
+            <div class="osimodelimg"  data-aos="fade-down">
                 <img src="Images/osimodel.png" alt="OSI Model">
             </div>
             <div class="blogbody">
                 <div class='para1'>
-                     <h2>What is OSI Model?</h2>
-                     <div class='overviewimg'><img src="Images/overvies.PNG" alt="OSI Layers"></div>
-                     <p>The Open Systems Interconnection Model (OSI) is a framework used to describe the functions of a networking system.In 1983, the CCITT and ISO documents were merged to form The Basic Reference Model for Open Systems Interconnection, usually referred to as the Open Systems Interconnection Reference Model, OSI Reference Model, or simply OSI model. It was published in 1984 by both the ISO, as standard ISO 7498, and the renamed CCITT (now called the Telecommunications Standardization Sector of the International Telecommunication Union or ITU-T) as standard X.200.</p>
+                     <h2  data-aos="fade-right">What is OSI Model?</h2>
+                     <div class='overviewimg'  data-aos="fade-down"><img src="Images/overvies.PNG" alt="OSI Layers"></div>
+                     <p  data-aos="fade-right">The Open Systems Interconnection Model (OSI) is a framework used to describe the functions of a networking system.In 1983, the CCITT and ISO documents were merged to form The Basic Reference Model for Open Systems Interconnection, usually referred to as the Open Systems Interconnection Reference Model, OSI Reference Model, or simply OSI model. It was published in 1984 by both the ISO, as standard ISO 7498, and the renamed CCITT (now called the Telecommunications Standardization Sector of the International Telecommunication Union or ITU-T) as standard X.200.</p>
                 </div>
                 <div class="para2">
-                    <h2>Why OSI Model?</h2>
-                    <div class="lanimg"><img src="Images/lan.PNG" alt="Example One"></div>
-                    <p class="reasonone">
+                    <h2   data-aos="fade-right">Why OSI Model?</h2>
+                    <div class="lanimg"   data-aos="fade-down"><img src="Images/lan.PNG" alt="Example One"></div>
+                    <p class="reasonone"   data-aos="fade-right">
                         when two computer want to send data we can connect the computer using a lan cable and connectors to transfer data with the help of Network Interface Card.
                     </p>
-                    <p class="reasonone">
+                    <p class="reasonone"   data-aos="fade-right">
                         But when two computer with different operating system want to send data, then how can they send data??
                         Here comes the Role of the OSI Model where the data processed over & different layer and then send over network to other devices.
                     </p>
@@ -41,7 +42,7 @@
                 <div class="para3">
                     <h1>OSI Model Layers:-</h1>
                     <ol class="headingol">
-                        <li>
+                        <li  data-aos="fade-right">
                             <h2 class="hed">Application Layer:-</h2>
                             <div class="applicationimg">
                                 <img src="Images/Application.PNG" alt="Application Protocols">
@@ -68,8 +69,8 @@
                             </p>
 
                         </li>
-                        <li>
-                            <h2 class="hed">Presentation Layer</h2>
+                        <li  data-aos="fade-right">
+                            <h2 class="hed">Presentation Layer:-</h2>
                             <div class="presentationimg">
                                 <img src="Images/Presentation.PNG" alt="Presentation Protocols">
                             </div>
@@ -89,8 +90,8 @@
                             </p>
 
                         </li>
-                        <li>
-                            <h2 class="hed">Session Layer</h2>
+                        <li  data-aos="fade-right">
+                            <h2 class="hed">Session Layer:-</h2>
                             <div class='sessionimg'><img src="Images/session.png" alt="Session" /></div>
                             <p>
                                 <ol class="oldiv">
@@ -114,8 +115,8 @@
                                 </ol>
                             </p>
                         </li>
-                        <li>
-                            <h2 class="hed">Transport Layer</h2>
+                        <li  data-aos="fade-right">
+                            <h2 class="hed">Transport Layer:-</h2>
                             <div class='transportimg'><img src="Images/Transport.png" alt="Transport"></div>
                             <ol class='oldiv'>
                                 <li>Transport layer is the 4th layer of the OSI Model.</li>
@@ -138,8 +139,8 @@
                                 </p>
                             </ol>
                         </li>
-                        <li>
-                            <h2 class="hed">Network Layer</h2>
+                        <li  data-aos="fade-right">
+                            <h2 class="hed">Network Layer:-</h2>
                             <div class="networkimg"><img src="Images/Network.png" alt="Network"></div>
                             <ol class="oldiv">
                                 <li>Network Layer is the 3rd layer of the OSI Model.</li>
@@ -165,8 +166,8 @@
                             </ol>
                            
                         </li>
-                        <li>
-                            <h2 class="hed">Data-Link layer</h2>
+                        <li  data-aos="fade-right">
+                            <h2 class="hed">Data-Link layer:-</h2>
                             <div class="dataimg"><img src="Images/Data.PNG" alt="Data"></div>
                             <ol class="oldiv">
                                 <li>The data link layer is a 4th layer from the top and 2nd layer from the bottom.</li>
@@ -204,8 +205,8 @@
                             </ol>
                            
                         </li>
-                        <li>
-                            <h2 class="hed">Presentation Layer</h2>
+                        <li  data-aos="fade-right">
+                            <h2 class="hed">Presentation Layer:-</h2>
                             <div class='presentationimg'><img src="Images/Physical.png" alt="Physical" /></div>
                             <ol class='oldiv'>
                                 <li>Presentation Layer is the 7th layer from the top and 1st layer from the bottom.</li>
@@ -233,14 +234,21 @@
 
                 </div>
                 <div class="para4">
-                    <h2>Flow of data in OSI Model:- </h2>
-                    <img src="Images/flow.png" alt="Data Flow">
+                    <h2  data-aos="fade-right">Flow of data in OSI Model:- </h2>
+                    <img src="Images/flow.png" alt="Data Flow"  data-aos="fade-down">
                     <p class="endpara">Above diagram illustrates how the data is sent and processed over the 7 layer from sender to receiver.</p>
                 </div>
             </div>
         </div>
     </div>
     </div>
-
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 100,
+        duration: 1000,
+        once: true,
+      });
+    </script>
 </body>
 </html>
