--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class='mainbody'>
         <div class="container">
             <div class="divbodymain">
-            <div class="headerdiv"  data-aos="fade-in">
+            <div class="headerdiv"  data-aos="fade-down">
                 <h1>OSI: The 7 Layered Computer Architecture Model.</h1>
             </div>
             <div class="osimodelimg"  data-aos="fade-down">
@@ -25,12 +25,12 @@
             <div class="blogbody">
                 <div class='para1'>
                      <h2  data-aos="fade-right">What is OSI Model?</h2>
-                     <div class='overviewimg'  data-aos="fade-down"><img src="Images/overvies.PNG" alt="OSI Layers"></div>
+                     <div class='overviewimg'  data-aos="fade-right"><img src="Images/overvies.PNG" alt="OSI Layers"></div>
                      <p  data-aos="fade-right">The Open Systems Interconnection Model (OSI) is a framework used to describe the functions of a networking system.In 1983, the CCITT and ISO documents were merged to form The Basic Reference Model for Open Systems Interconnection, usually referred to as the Open Systems Interconnection Reference Model, OSI Reference Model, or simply OSI model. It was published in 1984 by both the ISO, as standard ISO 7498, and the renamed CCITT (now called the Telecommunications Standardization Sector of the International Telecommunication Union or ITU-T) as standard X.200.</p>
                 </div>
                 <div class="para2">
                     <h2   data-aos="fade-right">Why OSI Model?</h2>
-                    <div class="lanimg"   data-aos="fade-down"><img src="Images/lan.PNG" alt="Example One"></div>
+                    <div class="lanimg"   data-aos="fade-right"><img src="Images/lan.PNG" alt="Example One"></div>
                     <p class="reasonone"   data-aos="fade-right">
                         when two computer want to send data we can connect the computer using a lan cable and connectors to transfer data with the help of Network Interface Card.
                     </p>
