--- a/index.html
+++ b/index.html
@@ -238,6 +238,11 @@
                     <img src="Images/flow.png" alt="Data Flow"  data-aos="fade-down">
                     <p class="endpara">Above diagram illustrates how the data is sent and processed over the 7 layer from sender to receiver.</p>
                 </div>
+                <div class="selfintroduction">
+                    <p>Name - Sameep Anil Sawant</p>
+                    <p>Roll No:- 20101A2001</p>
+                    <p>Branch:-INFT(A)</p>
+                </div>
             </div>
         </div>
     </div>
