--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <img src="Images/flow.png" alt="Data Flow"  data-aos="fade-down">
                     <p class="endpara">Above diagram illustrates how the data is sent and processed over the 7 layer from sender to receiver.</p>
                 </div>
-                <div class="selfintroduction">
+                <div class="selfintroduction" data-aos="fade-right">
                     <p>Name - Sameep Anil Sawant</p>
                     <p>Roll No:- 20101A2001</p>
                     <p>Branch:-INFT(A)</p>
